# KotlinTest

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/Source/Application/: CMakeLists.txt
app/src/main/cpp/Source/Application/NativeEngine/: NativeApplication.cpp  NativeApplication.h
app/src/main/cpp/Source/Application/RenderEngine/: RenderEngine.cpp  RenderEngine.h
app/src/main/cpp/Source/Application/RenderEngine/Scenes/: SceneType.h
app/src/main/cpp/Source/Player/: CMakeLists.txt  main.cpp
app/src/main/cpp/Source/Player/Callbacks/: LoadScene.cpp
app/src/main/cpp/Source/Runtime/: CMakeLists.txt
app/src/main/cpp/Source/Runtime/Graphics/Assert/: VAssert.cpp  VAssert.h
app/src/main/cpp/Source/Runtime/Graphics/Device/: GfxDevice.cpp  GfxDevice.h  VDevice.cpp  VDevice.h
app/src/main/cpp/Source/Runtime/Graphics/Instance/: GfxInstance.cpp  GfxInstance.h  GfxInstanceDesc.h  VInstance.cpp  VInstance.h
app/src/main/cpp/Source/Runtime/Log/: Log.cpp  Log.h
app/src/main/cpp/Source/Runtime/Reporter/: SystemReport.cpp  SystemReport.h
app/src/main/java/com/example/kotlintest/: MainActivity.kt  TestApplication.kt
app/src/main/java/com/example/kotlintest/callbacks/: loadScene.kt
app/src/main/java/com/example/kotlintest/scenecombox/: Scenes.kt
app/src/main/java/com/example/kotlintest/ui/: CompactDebugMenu.kt  GameOverlay.kt
app/src/main/res/values-night/: themes.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
